--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,23 @@
-#title {
+#logo {
     position: absolute;
-    width: 300px;
-    left: calc(50% - 300px/2);
+    width: 350px;
+    left: calc(50% - 350px/2);
+    top: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+
+    color: #000000;
+}
+
+.title {
+    position: absolute;
+    width: 350px;
+    left: calc(50% - 350px/2);
     top: 100px;
     margin-bottom: 0;
     margin-top: 0;    
@@ -15,23 +31,68 @@
     color: #000000;
 }
 
-#profile-pic {
+.writing-title {
     position: absolute;
-    width: 300px;
-    left: calc(50% - 300px/2);
+    width: 350px;
+    left: calc(50% - 350px/2);
+    top: 100px;
+    margin-bottom: 0;
+    margin-top: 0;    
+
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+
+
+    color: #000000;
+}
+
+.writing-date-title {
+    position: absolute;
+    width: 350px;
+    left: calc(50% - 350px/2);
+    top: 180px;
+    margin-bottom: 0;
+    margin-top: 0;
+
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+
+    color: #C4C4C4;
+}
+
+#pic-div {
+    position: absolute;
+    width: 350px;
+    left: calc(50% - 350px/2);
     top: 168px;
 }
 
+#profile-pic {
+    width: 250px;
+}
+
 #home-text {
-    top: 578px;
+    top: 513px;
+}
+
+#start-here-text {
+    top: 160px;
+}
+
+.writing-date-color {
+    color: #C4C4C4;
 }
 
 .body-text {
     position: absolute;
-    width: 300px;
-    left: calc(50% - 300px/2);
+    width: 350px;
+    left: calc(50% - 350px/2);
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
 
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
@@ -42,7 +103,25 @@
     color: #000000;
 }
 
+.writing-text {
+    position: absolute;
+    width: 350px;
+    left: calc(50% - 350px/2);
+    top: 214px;
+    margin-top: 0;
+    margin-bottom: 0px;    
+
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+
+    color: #000000;
+}
+
 a {
     color: #3C43FF;
     text-decoration: none;
 }
+
+
