--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@
 
 .writing-section-lead {
     font-size: 24px;
+    font-weight: normal;
 }
 
 .writing-images-preview {
@@ -79,6 +80,11 @@
 
 .writing-caption {
     font-style: italic;
+    font-size: 14px;
+}
+
+.writing-bold {
+    font-size: 18px;
 }
 
 #pic-div {
