--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@
     width: 350px;
     left: calc(50% - 350px/2);
     margin-top: 0;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
