--- a/css/styles.css
+++ b/css/styles.css
@@ -1,167 +1,63 @@
-#logo {
-    position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    top: 20px;
-    margin-top: 0;
-    margin-bottom: 0;
+/* styles.css */
 
-    font-family: 'Lato', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-
-    color: #000000;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.title {
-    position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    top: 100px;
-    margin-bottom: 0;
-    margin-top: 0;    
-
-    font-family: 'Lato', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
-
-
-    color: #000000;
+body {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.6;
+  color: #333;
+  padding: 30px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.writing-title {
-    position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    top: 100px;
-    margin-bottom: 0;
-    margin-top: 0;    
-
-    font-family: 'Lato', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
-
-    color: #000000;
+h1 {
+  font-weight: 700;
+  font-size: 3em;
+  /* Increased font size */
+  margin-bottom: 20px;
 }
 
-.writing-date {
-    /* margin-top: 10px; */
-
-    font-family: 'Lato', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-
-    color: #C4C4C4;
+h3 {
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
-#writing-body-text-long-title {
-    top: 260px;
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 20px 0;
 }
 
-#writing-body-text-medium-title {
-    top: 220px;
-}
-
-#writing-body-text-short-title {  
-
-    top: 180px;
-
-    /* position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    margin-top: 0;
-    margin-bottom: 20px;
-
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-
-    color: #000000; */
-    
-    /* font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-
-    color: #000000; */
-}
-
-.writing-section-lead {
-    font-size: 28px;
-    font-weight: normal;
-}
-
-.writing-section-sublead {
-    font-size: 24px;
-    font-weight: normal;
-    color: #585858;
-}
-
-.writing-images-preview {
-    width: 350px;
-}
-
-.writing-caption {
-    font-style: italic;
-    font-size: 14px;
-}
-
-.writing-bold {
-    font-size: 18px;
-}
-
-#pic-div {
-    position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    top: 168px;
-}
-
-#profile-pic {
-    width: 250px;
-}
-
-#home-text {
-    top: 457px;
-}
-
-#start-here-text {
-    top: 180px;
-}
-
-.writing-date-color {
-    color: #C4C4C4;
-}
-
-.my-images-preview {
-    width: 350px;
-}
-
-.body-text {
-    position: absolute;
-    width: 350px;
-    left: calc(50% - 350px/2);
-    margin-top: 0;
-    padding-bottom: 20px;
-
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-
-    color: #000000;
+p {
+  margin-bottom: 20px;
 }
 
 a {
-    color: #3C43FF;
-    text-decoration: none;
+  color: #007BFF;
+  /* Changed link color to blue */
+  text-decoration: none;
+}
+
+a:hover {
+  color: #0056B3;
+  /* Changed hover color */
+}
+
+#logo {
+  color: inherit;
+  text-decoration: none;
 }
 
 
+/* Responsive */
+@media (max-width: 768px) {
+  body {
+    padding: 20px;
+  }
+}
